feat: お問合せ機能追加

--- a/docs/テスト/お問合せ動作確認チェックリスト.md
+++ b/docs/テスト/お問合せ動作確認チェックリスト.md
@@ -13,606 +13,66 @@
 
 ## 1. お問合せフォーム画面の表示
 
-### 1.1 基本表示
-
-#### ページアクセス
 - [ ] `/contact` にアクセスできる
-- [ ] ページが正しく表示される
-- [ ] ページタイトルが「お問い合わせ」になっている
-- [ ] 背景色が`background.default`で表示されている
-- [ ] Containerが最大幅で制限されている
-
-#### ヘッダー・ナビゲーション
-- [ ] 「ホームに戻る」ボタンが表示されている
-- [ ] 「ホームに戻る」ボタンにArrowBackアイコンが表示されている
-- [ ] 「ホームに戻る」ボタンをクリックすると`/`に遷移する
-
-#### タイトル表示
-- [ ] 「お問い合わせ」というタイトルが表示されている
-- [ ] タイトルが中央揃えになっている
-- [ ] タイトルのフォントサイズが適切（h3、大きく読みやすい）
-
-#### フォームコンテナ
-- [ ] フォームが白背景のカードとして表示されている
-- [ ] カードに適切なパディングが設定されている
-- [ ] カードにボーダーラディウスが設定されている
-- [ ] カードにシャドウが表示されている
-
----
-
-### 1.2 フォームフィールド表示
-
-#### 名前フィールド
-- [ ] 「名前」ラベルが表示されている
-- [ ] テキストフィールドが表示されている
-- [ ] フィールドが必須マーク（*）付きで表示されている
-- [ ] フィールドが全幅で表示されている
-- [ ] プレースホルダーが適切に設定されている（または空）
-
-#### メールアドレスフィールド
-- [ ] 「メールアドレス」ラベルが表示されている
-- [ ] メールタイプのテキストフィールドが表示されている
-- [ ] フィールドが必須マーク（*）付きで表示されている
-- [ ] フィールドが全幅で表示されている
-- [ ] プレースホルダーが適切に設定されている（または空）
-
-#### 件名フィールド
-- [ ] 「件名」ラベルが表示されている
-- [ ] テキストフィールドが表示されている
-- [ ] フィールドが必須マーク（*）付きで表示されている
-- [ ] フィールドが全幅で表示されている
-- [ ] プレースホルダーが適切に設定されている（または空）
-
-#### 本文フィールド
-- [ ] 「本文」ラベルが表示されている
-- [ ] 複数行テキストエリアが表示されている
-- [ ] フィールドが必須マーク（*）付きで表示されている
-- [ ] フィールドが全幅で表示されている
-- [ ] 行数が適切に設定されている（8行）
-- [ ] プレースホルダーが適切に設定されている（または空）
-
-#### 送信ボタン
-- [ ] 「送信する」ボタンが表示されている
-- [ ] ボタンにSendアイコンが表示されている
-- [ ] ボタンがプライマリカラーで表示されている
-- [ ] ボタンサイズが`large`で表示されている
-- [ ] ボタンが適切な位置に配置されている
-
----
-
-### 1.3 レスポンシブ表示
-
-#### PC（デスクトップ）表示（1200px以上）
-- [ ] フォームが正しく表示されている
-- [ ] フィールドが適切な幅で表示されている
-- [ ] レイアウトが崩れていない
-
-#### タブレット表示（600px - 1199px）
-- [ ] フォームが正しく表示されている
-- [ ] フィールドが適切に調整されている
-- [ ] レイアウトが崩れていない
-
-#### スマートフォン表示（600px未満）
-- [ ] フォームが正しく表示されている
-- [ ] フィールドが全幅で表示されている
-- [ ] レイアウトが崩れていない
-- [ ] テキストが読みやすいサイズになっている
+- [ ] ページが正しく表示される（レイアウト崩れがない）
+- [ ] タイトル「お問い合わせ」が表示される
+- [ ] 「ホームに戻る」ボタンが表示され、クリックで `/` に遷移する
+- [ ] 入力フィールド（名前/メールアドレス/件名/本文）が表示される
+- [ ] 送信ボタン「送信する」が表示される
+- [ ] PC/タブレット/スマホ表示でレイアウトが崩れない
 
 ---
 
 ## 2. 必須項目の未入力時エラー表示
 
-### 2.1 名前フィールドのバリデーション
-
-#### 未入力時のエラー
-- [ ] 名前フィールドを空のまま送信ボタンをクリック
-- [ ] 「名前を入力してください」というエラーメッセージが表示される
-- [ ] エラーメッセージがフィールドの下に表示される
-- [ ] エラーメッセージが赤色で表示される
-- [ ] フィールドのボーダーが赤色になる
-- [ ] フォームが送信されない
-
-#### 入力後のエラー解除
-- [ ] 名前フィールドに文字を入力する
-- [ ] エラーメッセージが消える
-- [ ] フィールドのボーダーが通常の色に戻る
-
-#### 文字数制限エラー
-- [ ] 名前フィールドに101文字以上入力する
-- [ ] 「名前は100文字以内で入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
----
-
-### 2.2 メールアドレスフィールドのバリデーション
-
-#### 未入力時のエラー
-- [ ] メールアドレスフィールドを空のまま送信ボタンをクリック
-- [ ] 「メールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] エラーメッセージがフィールドの下に表示される
-- [ ] エラーメッセージが赤色で表示される
-- [ ] フィールドのボーダーが赤色になる
-- [ ] フォームが送信されない
-
-#### 入力後のエラー解除
-- [ ] メールアドレスフィールドに文字を入力する
-- [ ] エラーメッセージが消える
-- [ ] フィールドのボーダーが通常の色に戻る
-
-#### 文字数制限エラー
-- [ ] メールアドレスフィールドに256文字以上入力する
-- [ ] 「メールアドレスは255文字以内で入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
----
-
-### 2.3 件名フィールドのバリデーション
-
-#### 未入力時のエラー
-- [ ] 件名フィールドを空のまま送信ボタンをクリック
-- [ ] 「件名を入力してください」というエラーメッセージが表示される
-- [ ] エラーメッセージがフィールドの下に表示される
-- [ ] エラーメッセージが赤色で表示される
-- [ ] フィールドのボーダーが赤色になる
-- [ ] フォームが送信されない
-
-#### 入力後のエラー解除
-- [ ] 件名フィールドに文字を入力する
-- [ ] エラーメッセージが消える
-- [ ] フィールドのボーダーが通常の色に戻る
-
-#### 文字数制限エラー
-- [ ] 件名フィールドに201文字以上入力する
-- [ ] 「件名は200文字以内で入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
----
-
-### 2.4 本文フィールドのバリデーション
-
-#### 未入力時のエラー
-- [ ] 本文フィールドを空のまま送信ボタンをクリック
-- [ ] 「本文を入力してください」というエラーメッセージが表示される
-- [ ] エラーメッセージがフィールドの下に表示される
-- [ ] エラーメッセージが赤色で表示される
-- [ ] フィールドのボーダーが赤色になる
-- [ ] フォームが送信されない
-
-#### 入力後のエラー解除
-- [ ] 本文フィールドに文字を入力する
-- [ ] エラーメッセージが消える
-- [ ] フィールドのボーダーが通常の色に戻る
-
-#### 文字数制限エラー
-- [ ] 本文フィールドに5001文字以上入力する
-- [ ] 「本文は5000文字以内で入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
----
-
-### 2.5 複数フィールドのエラー表示
-
-#### 複数フィールド未入力
-- [ ] すべてのフィールドを空のまま送信ボタンをクリック
-- [ ] すべての必須フィールドにエラーメッセージが表示される
-- [ ] フォームが送信されない
-
-#### 部分的入力
-- [ ] 一部のフィールドのみ入力して送信ボタンをクリック
-- [ ] 未入力のフィールドのみエラーメッセージが表示される
-- [ ] 入力済みのフィールドにはエラーメッセージが表示されない
-- [ ] フォームが送信されない
+- [ ] 全項目未入力で送信すると、各フィールドに必須エラーが表示され送信されない
+- [ ] 名前未入力で送信すると「名前を入力してください」が表示される
+- [ ] メールアドレス未入力で送信すると「メールアドレスを入力してください」が表示される
+- [ ] 件名未入力で送信すると「件名を入力してください」が表示される
+- [ ] 本文未入力で送信すると「本文を入力してください」が表示される
+- [ ] エラー表示後に入力すると、該当フィールドのエラーが解除される
 
 ---
 
 ## 3. メールアドレス形式エラー表示
 
-### 3.1 無効なメールアドレス形式
-
-#### 基本的な無効形式
-- [ ] メールアドレスフィールドに「test」と入力して送信
-- [ ] 「有効なメールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
-- [ ] メールアドレスフィールドに「test@」と入力して送信
-- [ ] 「有効なメールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
-- [ ] メールアドレスフィールドに「test@example」と入力して送信
-- [ ] 「有効なメールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
-- [ ] メールアドレスフィールドに「@example.com」と入力して送信
-- [ ] 「有効なメールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
-#### 特殊文字を含む無効形式
-- [ ] メールアドレスフィールドに「test @example.com」（スペースを含む）と入力して送信
-- [ ] 「有効なメールアドレスを入力してください」というエラーメッセージが表示される
-- [ ] フォームが送信されない
-
----
-
-### 3.2 有効なメールアドレス形式
-
-#### 基本的な有効形式
-- [ ] メールアドレスフィールドに「test@example.com」と入力
-- [ ] エラーメッセージが表示されない
-- [ ] フォームが送信できる
-
-- [ ] メールアドレスフィールドに「user.name@example.co.jp」と入力
-- [ ] エラーメッセージが表示されない
-- [ ] フォームが送信できる
-
-- [ ] メールアドレスフィールドに「user+tag@example.com」と入力
-- [ ] エラーメッセージが表示されない
-- [ ] フォームが送信できる
-
-#### 入力後のエラー解除
-- [ ] 無効なメールアドレスを入力してエラーが表示される
-- [ ] 有効なメールアドレスに修正する
-- [ ] エラーメッセージが消える
-- [ ] フィールドのボーダーが通常の色に戻る
+- [ ] `test` で送信すると「有効なメールアドレスを入力してください」が表示され送信されない
+- [ ] `test@` で送信すると同様にエラーになる
+- [ ] `test@example` で送信すると同様にエラーになる
+- [ ] `@example.com` で送信すると同様にエラーになる
+- [ ] `test @example.com`（スペース含む）で送信すると同様にエラーになる
+- [ ] `test@example.com` で送信できる（エラーにならない）
 
 ---
 
 ## 4. 送信成功時の完了画面表示
 
-### 4.1 送信処理
-
-#### 正常な送信フロー
-- [ ] すべての必須フィールドに有効な値を入力する
-- [ ] 送信ボタンをクリックする
-- [ ] 送信ボタンが「送信中...」に変わる
-- [ ] 送信ボタンにCircularProgressアイコンが表示される
-- [ ] 送信ボタンが無効化される
-- [ ] フォームフィールドが無効化される
-- [ ] 送信処理が完了する
-
----
-
-### 4.2 送信完了画面の表示
-
-#### ページ遷移
-- [ ] 送信成功時に`/contact/success`にリダイレクトされる
-- [ ] リダイレクトがスムーズに行われる
-- [ ] ブラウザの履歴に正しく記録される
-
-#### 基本表示
-- [ ] 送信完了画面が正しく表示される
-- [ ] 背景色が`background.default`で表示されている
-- [ ] Containerが最大幅で制限されている
-- [ ] コンテンツが中央揃えで表示されている
-
-#### 成功アイコン
-- [ ] CheckCircleアイコンが表示されている
-- [ ] アイコンサイズが80pxで表示されている
-- [ ] アイコン色が成功カラー（緑色）で表示されている
-- [ ] アイコンが中央揃えになっている
-
-#### メッセージ表示
-- [ ] 「お問い合わせを受け付けました」というタイトルが表示されている
-- [ ] タイトルが中央揃えになっている
-- [ ] タイトルのフォントサイズが適切（h4、大きく読みやすい）
-- [ ] 説明文「お問い合わせありがとうございます。内容を確認次第、ご連絡いたします。」が表示されている
-- [ ] 説明文が中央揃えになっている
-
-#### アラート表示
-- [ ] 成功アラートが表示されている
-- [ ] アラートに「通常、2営業日以内にご返信いたします。」というメッセージが表示されている
-- [ ] アラートの色が成功カラー（緑色）で表示されている
-
-#### ホームに戻るボタン
-- [ ] 「ホームに戻る」ボタンが表示されている
-- [ ] ボタンにHomeアイコンが表示されている
-- [ ] ボタンがプライマリカラーで表示されている
-- [ ] ボタンサイズが`large`で表示されている
-- [ ] ボタンをクリックすると`/`に遷移する
-
----
-
-### 4.3 送信完了画面のレスポンシブ表示
-
-#### PC（デスクトップ）表示（1200px以上）
-- [ ] 送信完了画面が正しく表示される
-- [ ] レイアウトが崩れていない
-
-#### タブレット表示（600px - 1199px）
-- [ ] 送信完了画面が正しく表示される
-- [ ] レイアウトが適切に調整されている
-
-#### スマートフォン表示（600px未満）
-- [ ] 送信完了画面が正しく表示される
-- [ ] レイアウトが適切に調整されている
-- [ ] テキストが読みやすいサイズになっている
+- [ ] 有効な値で送信できる
+- [ ] 送信中はボタン表示が「送信中...」になり、ボタン/フィールドが無効化される
+- [ ] 送信成功後 `/contact/success` に遷移する
+- [ ] 完了画面に「お問い合わせを受け付けました」が表示される
+- [ ] 完了画面の「ホームに戻る」ボタンで `/` に遷移できる
 
 ---
 
 ## 5. 管理者へのメール受信確認
 
-### 5.1 メール送信の基本確認
-
-#### メール受信
-- [ ] お問い合わせフォームを送信する
-- [ ] 管理者メールアドレス（`ADMIN_EMAIL`環境変数で設定）にメールが届く
-- [ ] メールがスパムフォルダに入っていない
-- [ ] メールが正常に受信できる
-
-#### メール送信タイミング
-- [ ] フォーム送信後、適切なタイミングでメールが送信される
-- [ ] メール送信が遅延なく行われる
-
----
-
-### 5.2 メール内容の確認
-
-#### 送信者情報
-- [ ] メールの送信者（From）が正しく設定されている
-- [ ] 送信者のメールアドレスが`SMTP_USER`環境変数で設定されたアドレスになっている
-
-#### 受信者情報
-- [ ] メールの受信者（To）が管理者メールアドレスになっている
-- [ ] 受信者が`ADMIN_EMAIL`環境変数で設定されたアドレスになっている
-
-#### 件名
-- [ ] メールの件名が「[お問い合わせ] {件名}」の形式になっている
-- [ ] 件名にフォームで入力した件名が含まれている
-
-#### 本文内容
-- [ ] メール本文に送信者の名前が含まれている
-- [ ] メール本文に送信者のメールアドレスが含まれている
-- [ ] メール本文に件名が含まれている
-- [ ] メール本文に本文が含まれている
-- [ ] メール本文がHTML形式で正しく表示される
-- [ ] メール本文が読みやすい形式になっている
-
-#### メール形式
-- [ ] メールがHTML形式で送信されている
-- [ ] メールがテキスト形式でも読める（フォールバック）
-- [ ] メールの文字エンコーディングが正しい（UTF-8）
-
----
-
-### 5.3 メール送信エラーの確認
-
-#### メール送信失敗時の動作
-- [ ] SMTP設定が無効な場合でも、フォーム送信は成功する（DB保存は成功）
-- [ ] メール送信エラーがサーバーログに記録される
-- [ ] ユーザーにはメール送信エラーが表示されない（DB保存は成功しているため）
+- [ ] お問い合わせ送信後、`ADMIN_EMAIL` 宛にメールが届く
+- [ ] 迷惑メールフォルダに入っていない
+- [ ] 件名が `[お問い合わせ] {件名}` 形式になっている
+- [ ] 本文に「名前/メールアドレス/件名/本文」が含まれている
+- [ ] HTML表示が崩れていない（テキスト版も読める）
 
 ---
 
 ## 6. MongoDBへのデータ保存確認
 
-### 6.1 データ保存の基本確認
-
-#### データ保存の実行
-- [ ] お問い合わせフォームを送信する
-- [ ] MongoDBにデータが保存される
-- [ ] データ保存がエラーなく完了する
-
-#### データ保存タイミング
-- [ ] フォーム送信後、適切なタイミングでデータが保存される
-- [ ] データ保存が遅延なく行われる
-
----
-
-### 6.2 保存データの内容確認
-
-#### 名前フィールド
-- [ ] 保存されたデータの`name`フィールドが正しい
-- [ ] 名前の前後の空白（trim）が削除されている
-- [ ] 名前が100文字以内で保存されている
-
-#### メールアドレスフィールド
-- [ ] 保存されたデータの`email`フィールドが正しい
-- [ ] メールアドレスの前後の空白（trim）が削除されている
-- [ ] メールアドレスが小文字（lowercase）に変換されている
-- [ ] メールアドレスが255文字以内で保存されている
-
-#### 件名フィールド
-- [ ] 保存されたデータの`subject`フィールドが正しい
-- [ ] 件名の前後の空白（trim）が削除されている
-- [ ] 件名が200文字以内で保存されている
-
-#### 本文フィールド
-- [ ] 保存されたデータの`message`フィールドが正しい
-- [ ] 本文の前後の空白（trim）が削除されている
-- [ ] 本文が5000文字以内で保存されている
-
-#### 作成日時フィールド
-- [ ] 保存されたデータの`createdAt`フィールドが存在する
-- [ ] `createdAt`が現在の日時に近い値になっている
-- [ ] `createdAt`がDate型で保存されている
-
----
-
-### 6.3 データベース接続の確認
-
-#### MongoDB接続
-- [ ] MongoDBへの接続が正常に確立される
-- [ ] 接続エラーが発生しない
-- [ ] 接続プールが適切に管理されている
-
-#### コレクション・モデル
-- [ ] `contacts`コレクションにデータが保存される
-- [ ] Contactモデルが正しく使用されている
-- [ ] スキーマバリデーションが正しく機能している
-
----
-
-### 6.4 データ保存エラーの確認
-
-#### バリデーションエラー
-- [ ] 無効なデータ（文字数超過など）を送信した場合、データが保存されない
-- [ ] 適切なエラーメッセージが返される
-
-#### 接続エラー
-- [ ] MongoDB接続が失敗した場合、適切なエラーメッセージが返される
-- [ ] ユーザーに分かりやすいエラーメッセージが表示される
-
----
-
-## 7. その他の確認項目
-
-### 7.1 フォーム送信中の状態
-
-#### ローディング状態
-- [ ] 送信ボタンをクリックすると、ボタンが「送信中...」に変わる
-- [ ] 送信ボタンにCircularProgressアイコンが表示される
-- [ ] 送信ボタンが無効化される
-- [ ] フォームフィールドが無効化される
-- [ ] 送信処理中はフォームを操作できない
-
-#### 送信完了後の状態
-- [ ] 送信が完了すると、ローディング状態が解除される
-- [ ] 送信完了画面にリダイレクトされる
-
----
-
-### 7.2 エラーハンドリング
-
-#### ネットワークエラー
-- [ ] ネットワークエラーが発生した場合、適切なエラーメッセージが表示される
-- [ ] エラーメッセージがフォーム上部に表示される
-- [ ] エラーメッセージが赤色のアラートで表示される
-
-#### サーバーエラー
-- [ ] サーバーエラー（500エラーなど）が発生した場合、適切なエラーメッセージが表示される
-- [ ] エラーメッセージがユーザーに分かりやすい内容になっている
-
-#### バリデーションエラー（サーバー側）
-- [ ] サーバー側バリデーションでエラーが発生した場合、適切なエラーメッセージが表示される
-- [ ] エラーメッセージがフォーム上部に表示される
-
----
-
-### 7.3 パフォーマンス
-
-#### ページ読み込み速度
-- [ ] お問い合わせフォームページの読み込み速度が適切（3秒以内）
-- [ ] 送信完了画面の読み込み速度が適切（3秒以内）
-
-#### 送信処理速度
-- [ ] フォーム送信処理が適切な時間内に完了する（5秒以内）
-- [ ] データベースへの保存が適切な時間内に完了する
-- [ ] メール送信が適切な時間内に完了する
-
----
-
-### 7.4 アクセシビリティ
-
-#### キーボード操作
-- [ ] すべてのフォームフィールドがキーボードで操作可能
-- [ ] Tabキーでフィールド間を移動できる
-- [ ] Enterキーでフォームを送信できる
-- [ ] フォーカスインジケーターが表示される
-
-#### スクリーンリーダー
-- [ ] スクリーンリーダーでフォームが読み上げられる
-- [ ] ラベルとフィールドが適切に関連付けられている
-- [ ] エラーメッセージが適切に読み上げられる
-
-#### コントラスト比
-- [ ] テキストと背景のコントラスト比がWCAG AA基準を満たしている
-- [ ] エラーメッセージが十分なコントラストで表示される
-
----
-
-### 7.5 セキュリティ
-
-#### 入力値のサニタイズ
-- [ ] 入力値の前後の空白が削除されている（trim）
-- [ ] メールアドレスが小文字に変換されている
-- [ ] 特殊文字が適切に処理されている
-
-#### XSS対策
-- [ ] HTMLタグを含む入力が適切にエスケープされている
-- [ ] スクリプトタグを含む入力が適切に処理されている
-
-#### CSRF対策
-- [ ] フォーム送信が適切に保護されている（Next.jsのデフォルト機能）
-
----
-
-### 7.6 ブラウザ互換性
-
-#### Chrome
-- [ ] Chromeで正常に動作する
-- [ ] フォームが正しく表示される
-- [ ] 送信処理が正常に動作する
-
-#### Firefox
-- [ ] Firefoxで正常に動作する
-- [ ] フォームが正しく表示される
-- [ ] 送信処理が正常に動作する
-
-#### Safari
-- [ ] Safariで正常に動作する
-- [ ] フォームが正しく表示される
-- [ ] 送信処理が正常に動作する
-
-#### Edge
-- [ ] Edgeで正常に動作する
-- [ ] フォームが正しく表示される
-- [ ] 送信処理が正常に動作する
-
----
-
-### 7.7 コンソールエラー確認
-
-#### クライアント側エラー
-- [ ] ブラウザのコンソールにエラーが表示されない
-- [ ] 警告メッセージが適切に処理されている
-
-#### ネットワークエラー
-- [ ] ネットワークタブにエラーが表示されない
-- [ ] APIリクエストが正常に送信されている
-
----
-
-## 確認結果サマリー
-
-### 確認完了項目数
-- 総項目数: _______________
-- 合格項目数: _______________
-- 不合格項目数: _______________
-
-### 発見された問題
-
-#### 重大な問題（Critical）
-1. _______________
-2. _______________
-3. _______________
-
-#### 中程度の問題（Major）
-1. _______________
-2. _______________
-3. _______________
-
-#### 軽微な問題（Minor）
-1. _______________
-2. _______________
-3. _______________
-
-### 改善提案
-1. _______________
-2. _______________
-3. _______________
-
-### 確認者コメント
-_______________
-_______________
-_______________
-
----
-
-## 確認完了
-
-- [ ] すべての確認項目を完了した
-- [ ] 発見された問題を記録した
-- [ ] 改善提案を記録した
-- [ ] 確認結果を関係者に共有した
-
-**確認日**: _______________  
-**確認者署名**: _______________
+- [ ] お問い合わせ送信後、MongoDBの `contacts` コレクションにデータが保存される
+- [ ] 保存データに `name/email/subject/message/createdAt` が入っている
+- [ ] `name/subject/message` は trim されている
+- [ ] `email` は小文字化されて保存されている
+
+### MongoDB Atlas 利用時の注意
+
+- [ ] Atlas の **Network Access → IP Access List** に、送信元のグローバルIPが許可されている
+- [ ] 許可されていない場合、ローカルからは接続できず保存されない（アプリではエラーになる）
