--- a/docs/テスト/お問合せ動作確認結果レポート.md
+++ b/docs/テスト/お問合せ動作確認結果レポート.md
@@ -11,6 +11,72 @@
 
 ---
 
+## 実動作テスト結果（HTTP/サーバーログベース）
+
+※この環境ではGUIブラウザの手動操作は行わず、`npm run dev` 実行後に **Playwright（ヘッドレスブラウザ）/HTTP/サーバーログ** で検証しています。  
+サーバーは **起動中**（停止は未実施）です。
+
+### 判定（チェックリスト全項目）
+
+#### 1. お問合せフォーム画面の表示
+- `/contact` にアクセスできる: **OK**（GET `/contact` 200）
+- ページが正しく表示される（レイアウト崩れがない）: **OK**（Playwrightで主要要素表示＆スクリーンショット取得）
+- タイトル「お問い合わせ」が表示される: **OK**（HTML内に「お問い合わせ」あり）
+- 「ホームに戻る」ボタンが表示され、クリックで `/` に遷移する: **OK**（Playwrightでクリック遷移を確認）
+- 入力フィールド（名前/メールアドレス/件名/本文）が表示される: **OK**（HTML内に「名前/メールアドレス/件名/本文」あり）
+- 送信ボタン「送信する」が表示される: **OK**（HTML内に「送信する」あり）
+- PC/タブレット/スマホ表示でレイアウトが崩れない: **OK**（Playwrightで各viewportのスクリーンショット取得: `test-results/contact-viewports/*.png`）
+
+#### 2. 必須項目の未入力時エラー表示
+- 全項目未入力で送信すると、各フィールドに必須エラーが表示され送信されない: **OK**（Playwrightで確認）
+- 名前未入力で送信すると「名前を入力してください」が表示される: **OK**（Playwrightで確認）
+- メールアドレス未入力で送信すると「メールアドレスを入力してください」が表示される: **OK**（Playwrightで確認）
+- 件名未入力で送信すると「件名を入力してください」が表示される: **OK**（Playwrightで確認）
+- 本文未入力で送信すると「本文を入力してください」が表示される: **OK**（Playwrightで確認）
+- エラー表示後に入力すると、該当フィールドのエラーが解除される: **OK**（Playwrightで確認）
+
+補足（サーバー側）:
+- 空/不正で POST `/api/contact` → 400（= サーバー側ガードは動作）
+
+#### 3. メールアドレス形式エラー表示
+- `test` で送信すると「有効なメールアドレスを入力してください」が表示され送信されない: **OK**（POST `/api/contact` → 400 同メッセージ）
+- `test@` で送信すると同様にエラーになる: **OK**（POST `/api/contact` → 400 同メッセージ）
+- `test@example` で送信すると同様にエラーになる: **OK**（POST `/api/contact` → 400 同メッセージ）
+- `@example.com` で送信すると同様にエラーになる: **OK**（POST `/api/contact` → 400 同メッセージ）
+- `test @example.com`（スペース含む）で送信すると同様にエラーになる: **OK**（POST `/api/contact` → 400 同メッセージ）
+- `test@example.com` で送信できる（エラーにならない）: **OK**（POST `/api/contact` → 200）
+
+#### 4. 送信成功時の完了画面表示
+- 有効な値で送信できる: **OK**（POST `/api/contact` → 200）
+- 送信中はボタン表示が「送信中...」になり、ボタン/フィールドが無効化される: **OK**（Playwrightで確認 ※APIレスポンスはモックでUI確認）
+- 送信成功後 `/contact/success` に遷移する: **OK**（Playwrightで確認 ※APIレスポンスはモックでUI確認）
+- 完了画面に「お問い合わせを受け付けました」が表示される: **OK**（GET `/contact/success` 200 & 文言あり）
+- 完了画面の「ホームに戻る」ボタンで `/` に遷移できる: **OK**（Playwrightでクリック遷移を確認 ※APIレスポンスはモックでUI確認）
+
+#### 5. 管理者へのメール受信確認
+- お問い合わせ送信後、`ADMIN_EMAIL` 宛にメールが届く: **NG**（受信箱の確認が必要。ただしサーバーログは「メール送信成功」）
+- 迷惑メールフォルダに入っていない: **NG**（要手動確認）
+- 件名が `[お問い合わせ] {件名}` 形式になっている: **NG**（要手動確認）
+- 本文に「名前/メールアドレス/件名/本文」が含まれている: **NG**（要手動確認）
+- HTML表示が崩れていない（テキスト版も読める）: **NG**（要手動確認）
+
+#### 6. MongoDBへのデータ保存確認
+- お問い合わせ送信後、MongoDBの `contacts` コレクションにデータが保存される: **NG**
+- 保存データに `name/email/subject/message/createdAt` が入っている: **NG**
+- `name/subject/message` は trim されている: **NG**
+- `email` は小文字化されて保存されている: **NG**
+
+MongoDB Atlas 利用時の注意:
+- Atlas の **Network Access → IP Access List** に、送信元のグローバルIPが許可されている: **NG**
+- 許可されていない場合、ローカルからは接続できず保存されない（アプリではエラーになる）: **OK**
+
+**NGの根拠（サーバーログ）**:
+- `MongooseServerSelectionError: Could not connect to any servers ... IP that isn't whitelisted`
+
+（補足）開発環境ではMongoDB接続不可時に `tmp/contact-submissions.jsonl` へフォールバック保存する挙動を確認しました。
+
+---
+
 ## コードベース分析結果
 
 ### ✅ 実装確認済み項目
@@ -221,4 +287,5 @@
 - MongoDB接続が正常に動作することを確認してください
 - SMTP設定が正しく動作することを確認してください
 - 実際のメール送信テストを行う際は、テスト用のメールアドレスを使用してください
+
 
