feat: オーナー管理画面追加

--- a/docs/tasks/2025-12-26/TASK003_オーナー管理者専用管理画面/環境変数設定チェックリスト確認結果.md
+++ b/docs/tasks/2025-12-26/TASK003_オーナー管理者専用管理画面/環境変数設定チェックリスト確認結果.md
@@ -84,8 +84,8 @@ ADMIN_EMAIL=jullyo0o0@gmail.com
 # NextAuth.js設定
 AUTH_SECRET=9x19vu
 AUTH_URL=http://localhost:3000
-GOOGLE_CLIENT_ID=***（機密情報のため非表示）
-GOOGLE_CLIENT_SECRET=***（機密情報のため非表示）
+GOOGLE_CLIENT_ID=[REDACTED]
+GOOGLE_CLIENT_SECRET=[REDACTED]
 
 ADMIN_EMAILS=jullyo0o0@gmail.com
 ```
